ido-tth/main/default/objects/tth_Mock_MC_Individual_eMail_Results__mdt/tth_Mock_MC_Individual_eMail_Results__mdt.object-meta.xml
<CustomObject>
    <label>Mock MC - Individual eMail Result</label>
    <pluralLabel>Mock MC - Individual eMail Result</pluralLabel>
</CustomObject>