ido-tth/main/default/objects/tth_Mock_MC_Individual_eMail_Results__mdt/fields/Bounced__c.field-meta.xml
<CustomField>
    <fullName>Bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bounced</label>
    <type>Checkbox</type>
</CustomField>