ido-tth/main/default/objects/tth_Mock_MC_Individual_eMail_Results__mdt/fields/Clicked__c.field-meta.xml
<CustomField>
    <fullName>Clicked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clicked</label>
    <type>Checkbox</type>
</CustomField>