ido-tth/main/default/objects/tth_Mock_MC_Individual_eMail_Results__mdt/fields/Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent__c</fullName>
    <label>Date Sent</label>
    <type>Date</type>
</CustomField>