ido-tth/main/default/objects/tth_Mock_MC_Individual_eMail_Results__mdt/fields/eMail_Name__c.field-meta.xml
<CustomField>
    <fullName>eMail_Name__c</fullName>
    <label>EMail Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>