ido-tth/main/default/objects/tth_Mock_MC_Individual_eMail_Results__mdt/fields/Opened__c.field-meta.xml
<CustomField>
    <fullName>Opened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opened</label>
    <type>Checkbox</type>
</CustomField>